--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -82,14 +82,13 @@ h1 {
 .contact-banner-text h1,
 .blog-page-header h1 {
   @include fontSize(5.5rem);
-  // text-align: center;
-  // padding-top: 100px;
-  // padding-right: 250px;
 }
 
 
 
 // --------------------------------
+
+// .blog-page-header:
 
 .blog-page-header {
   background-image: url(../../assets/blog-header.jpg);
